# customWAV

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  customsentence.py
.github/workflows/: create_release.yml  release.yml
need/: README.md
sound-bored/: .gitignore  Cargo.toml
sound-bored/src/: lib.rs  main.rs
sound-bored/tests/: integration.rs
src/: audio.rs  audio_conversion.rs  error.rs  lib.rs  main.rs  memory_buffer.rs
tests/: common.rs  integration.rs  memory_buffer.rs
tests/res/: test_mp3_samples.serde
