[package]
name = "sound-bored"
version = "0.1.0"
authors = ["Dalton Maahs <dalton.maahs@yourbind.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { git = "https://github.com/clap-rs/clap/" }
creak = "0.3.0"
dasp = { version = "0.11.0", features = ["interpolate", "interpolate-linear", "signal"] }
hound = "3.4.0"

[dev-dependencies]
serde_json = "1.0.62"
tempfile = "3.2.0"
